# dy_gh_watch_and_upload

./: .gitignore  README.md  file_monitor.service  main.py  pyproject.toml  requirements.txt.backup
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
config/: app.env  settings.py  settings.yaml
src/: main.py
src/db/: __init__.py  base.py  connection.py  init_db.py
src/models/: __init__.py  file_info.py  upload_result.py
src/services/: api_client.py  file_monitor.py  file_processor.py  scheduler.py  upload_service.py
src/uploader/: __init__.py  service.py
src/utils/: logger.py
