[project]
name = "dy-gh-watch-and-upload"
version = "0.1.0"
description = "File Monitoring and Auto-Upload System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "watchdog>=3.0.0",
    "SQLAlchemy>=2.0.0",
    "requests>=2.31.0",
    "APScheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dateutil>=2.8.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
]
